--- a/index.html
+++ b/index.html
@@ -1091,8 +1091,8 @@ function openApp(id){
  /**************** Browser (LPOS JSON search + tabs) ****************/
 
 // TODO: Replace these with your real values
-const LPOS_SEARCH_API_KEY = "YOUR_GOOGLE_API_KEY";
-const LPOS_SEARCH_CX      = "YOUR_CSE_ID";
+const LPOS_SEARCH_API_KEY = "AIzaSyArrkHhmK5nxuBukbUk_JJC_fKkOOdNBko";
+const LPOS_SEARCH_CX      = "41f9b115ed19d47de";
 
 registerApp("browser", {
   title: "Liquid Plastic Browser",
